# FrostyCore

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md
cmake/: GenerateShaderSource.cmake
src/: library.h
src/Core/: Application.cpp  Application.cppm  Entrance.ixx  Events.ixx  Exception.ixx  FileSystem.ixx  Layer.ixx  Prelude.ixx  STLExtension.ixx
src/ImGui/: ImGui.ixx  ImGuiApplication.cpp  ImGuiApplication.ixx
src/Impl/: VulkanImpl.cpp
src/Render/: Color.ixx  FramebufferPresenter.cpp  FramebufferPresenter.cppm  Image.ixx  Renderer2D.cpp  Renderer2D.cppm  Swapchain.ixx  Utilities.ixx  VirtualTextureManager.cpp  VirtualTextureManager.cppm
src/Render/shaders/: copy_to_main_framebuffer.ps.hlsl  copy_to_main_framebuffer.vs.hlsl  renderer2d_ellipse.ps.hlsl  renderer2d_ellipse.vs.hlsl  renderer2d_line.ps.hlsl  renderer2d_line.vs.hlsl  renderer2d_triangle.ps.hlsl  renderer2d_triangle.vs.hlsl  simple_vb_triangle.ps.hlsl  simple_vb_triangle.vs.hlsl  triangle.ps.hlsl  triangle.vs.hlsl
